syntax = "proto3";

package org.example;

option java_outer_classname = "MessageProtos";
option java_multiple_files = true;
option java_package = "org.example.proto";

message HttpRequest {
  optional string name = 1;
}

message HttpResponse {
  optional string message = 1;
}

service Greeting {
  rpc SayHello(HttpRequest) returns (HttpResponse);
}